second_practice/drill-01/main-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: myapp-main-clusterip
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  selector:
    app: myapp
