second_practice/drill-01/myappv1-microservice.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myapp-v1-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myapp
      version: v1
  template:
    metadata:
      labels:
        app: myapp
        version: v1
    spec:
      containers:
        - image: nginx:1.11.5
          name: myappv1
          ports:
            - containerPort: 80
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: config-volume
          configMap:
            name: myappv1-config

---
apiVersion: v1
kind: Service
metadata:
  name: myappv1-clusterip
spec:
  type: ClusterIP
  ports:
    - targetPort: 80
      port: 80
  selector:
    app: myapp
    version: v1
